# rscan

./: README.md  flake.nix
rscan/client/: Cargo.toml
rscan/client/blender/: .gitignore  Cargo.toml  demo-scene.blend  script.py
rscan/client/blender/src/: main.rs
rscan/client/mock_device/: Cargo.toml
rscan/client/mock_device/src/: coder.rs  main.rs
rscan/client/scanner_comms/: Cargo.toml  Cross.toml  build.rs  cbindgen.toml  my_header.h
rscan/client/scanner_comms/include/: .gitignore
rscan/client/scanner_comms/src/: header.rs  lib.rs  packetsold.rs
rscan/client/scanner_comms/src/packets/: header.rs  mod.rs  packet_abort.rs  packet_err.rs  packet_fin.rs  packet_mes.rs  packet_mov.rs  packet_ok.rs  packet_prog.rs
rscan/client/slint_gui/: Cargo.toml  README.md  build-all-release.sh  build-all.sh  build.rs
rscan/client/slint_gui/dev-scripts/: create-virtual-serial.sh  listen-port.sh
rscan/client/slint_gui/dev_tools/: repeater.py
rscan/client/slint_gui/src/: coder.rs  handlers.rs  main.rs  state.rs
rscan/client/slint_gui/ui/: appwindow.slint
rscan/client/true_mock/: Cargo.toml
rscan/client/true_mock/src/: coder.rs  main.rs
