[package]
name = "scanner_comms"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[lib]
#crate-type   = ["cdylib"]
crate-type = ["staticlib", "rlib"]
#crate-type = ["dylib"]

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "s"  # Optimize for size. try also z
lto = true
codegen-units = 1
panic = "abort"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# QOL
#anyhow = { version = "1.0", default-features = false }
log = { version = "0.4" }

# Panic handles:
panic-semihosting = { version = "0.6" }
panic-abort = { version = "0.3.2", default-features = false }

# Comms
crc = { version = "3.2" }
corncobs = { version = "0.1" }
byteorder = { version = "1.5", default-features = false }

[build-dependencies]
cbindgen = "0.26"
