[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"

[target.x86_64-unknown-linux-gnu]
linker = "x86_64-linux-gnu-gcc"

[package]
name = "slint_gui"
version = "0.1.0"
edition = "2021"
build = "build.rs"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scanner_comms = { path = "../scanner_comms" }
tokio = { version = "1", features = ["full"] }
anyhow = { version = "1.0" }
slint = { version = "1.6" }
#serialport = { version = "4.3" }
serial2-tokio = { version = "0.1" }
tokio-serial = { version = "5.4.1" }
corncobs = { version = "0.1", features = ["std"] }
log = { version = "0.4" }
env_logger = { version = "0.11" }
futures = { version = "0.3" }


[build-dependencies]
slint-build = "1.6"
